--- a/caddy/caddy/template.html
+++ b/caddy/caddy/template.html
@@ -354,7 +354,8 @@ footer {
 		</main>
 		<footer>
 			<p>Served with <a rel="noopener noreferrer" href="https://caddyserver.com">Caddy</a> </p>
-            <p>Site maintained by: <a href="mailto:contact@jingk.ai">JK Tan</a></p>
+			<p>To report an issue, kindly send an <a href="mailto:contact@jingk.ai">email</a>, or open a <a href="mailto:contact@jingk.ai">Github issue</a> (preferred)</p>
+			<p>This mirror is maintained by Jingkai Tan</p>
 		</footer>
 		<script>
 			var filterEl = document.getElementById('filter');
